--- a/DocTimes/Views/Doctor/List.cshtml
+++ b/DocTimes/Views/Doctor/List.cshtml
@@ -10,37 +10,106 @@
                 <div class="row">
                     <div class="col-sm-5 col-md-4">
                         <div class="position-relative h-sm-100">
-                            <a class="d-block h-100" href="../../../app/e-commerce/product/product-details.html"><img class="img-fluid object-fit-cover w-sm-100 h-sm-100 rounded-1 absolute-sm-centered" src="~/assets/doctor/doctor3.jpg" alt="" /></a>
+                            <a data-spa="DoctorProfile/Index" class="d-block h-100"  ><img class="img-fluid object-fit-cover w-sm-100 h-sm-100 rounded-1 absolute-sm-centered" src="~/assets/doctor/doctor3.jpg" alt="" /></a>
                         </div>
                     </div>
                     <div class="col-sm-7 col-md-8">
                         <div class="row">
                             <div class="col-lg-8">
-                                <h5 class="mt-3 mt-sm-0"><a class="text-1100 fs-9 fs-lg-8" href="../../../app/e-commerce/product/product-details.html">Apple iPhone XS Max (4GB RAM, 512GB ROM, 12MP Main Camera)</a></h5>
-                                <p class="fs-10 mb-2 mb-md-3"><a class="text-500" href="#!">Mobile &amp; Tabs</a></p>
+                                <h5 class="mt-3 mt-sm-0">
+                                    <a class="text-1100 fs-9 fs-lg-8" href="" data-spa="DoctorProfile/Index">
+                                        Dr. John Smith, MD (Cardiologist, 15 Years of Experience)
+                                    </a>
+                                </h5>
+                                <p class="fs-10 mb-2 mb-md-3">
+                                    <a class="text-500" href="#!">Cardiology Department</a>
+                                </p>
                                 <ul class="list-unstyled d-none d-lg-block">
-                                    <li><span class="fas fa-circle" data-fa-transform="shrink-12"></span><span>4GB RAM</span></li>
-                                    <li><span class="fas fa-circle" data-fa-transform="shrink-12"></span><span>512GB Internal Storage</span></li>
-                                    <li><span class="fas fa-circle" data-fa-transform="shrink-12"></span><span>Apple A12 Bionic (7nm)</span></li>
-                                    <li><span class="fas fa-circle" data-fa-transform="shrink-12"></span><span>iOS 12</span></li>
-                                    <li><span class="fas fa-circle" data-fa-transform="shrink-12"></span><span>3174mAh Li-Ion Battery</span></li>
+                                    <li><span class="fas fa-circle" data-fa-transform="shrink-12"></span><span>Specializes in Heart Diseases</span></li>
+                                    <li><span class="fas fa-circle" data-fa-transform="shrink-12"></span><span>15+ Years of Clinical Experience</span></li>
+                                    <li><span class="fas fa-circle" data-fa-transform="shrink-12"></span><span>Harvard Medical School Graduate</span></li>
+                                    <li><span class="fas fa-circle" data-fa-transform="shrink-12"></span><span>Board Certified in Cardiology</span></li>
+                                    <li><span class="fas fa-circle" data-fa-transform="shrink-12"></span><span>Available for Appointments</span></li>
                                 </ul>
+
                             </div>
                             <div class="col-lg-4 d-flex justify-content-between flex-column">
                                 <div>
-                                    <h4 class="fs-8 fs-md-7 text-warning mb-0">$1050</h4>
+                                    <h4 class="fs-8 fs-md-7 text-warning mb-0">$150 / Consultation</h4>
                                     <div class="mb-2 mt-3">
-                                        <span class="fa fa-star text-warning"></span><span class="fa fa-star text-warning"></span><span class="fa fa-star text-warning"></span><span class="fa fa-star text-warning"></span><span class="fa fa-star-half-alt text-warning star-icon"></span><span class="ms-1">(13)</span>
+                                        <span class="fa fa-star text-warning"></span><span class="fa fa-star text-warning"></span>
+                                        <span class="fa fa-star text-warning"></span><span class="fa fa-star text-warning"></span>
+                                        <span class="fa fa-star-half-alt text-warning star-icon"></span><span class="ms-1">(85 Reviews)</span>
                                     </div>
                                     <div class="d-none d-lg-block">
-                                        <p class="fs-10 mb-1">Shipping Cost: <strong>$65</strong></p>
-                                        <p class="fs-10 mb-1">
-                                            Stock: <strong class="text-success">Available</strong>
-                                        </p>
+                                        <p class="fs-10 mb-1">Consultation Fee: <strong>$150</strong></p>
+                                        <p class="fs-10 mb-1">Availability: <strong class="text-success">Open for Appointments</strong></p>
                                     </div>
                                 </div>
-                                <div class="mt-2"><a class="btn btn-sm btn-outline-secondary border-300 d-lg-block me-2 me-lg-0" href="#!"><span class="far fa-heart"></span><span class="ms-2 d-none d-md-inline-block">Favourite</span></a><a class="btn btn-sm btn-primary d-lg-block mt-lg-2" href="#!"><span class="fas fa-cart-plus"> </span><span class="ms-2 d-none d-md-inline-block">Book Now</span></a></div>
+                                <div class="mt-2">
+                                    <a class="btn btn-sm btn-outline-secondary border-300 d-lg-block me-2 me-lg-0" href="#!">
+                                        <span class="far fa-heart"></span><span class="ms-2 d-none d-md-inline-block">Save to Favorites</span>
+                                    </a>
+                                    <a class="btn btn-sm btn-primary d-lg-block mt-lg-2" href="#!">
+                                        <span class="fas fa-calendar-plus"></span><span class="ms-2 d-none d-md-inline-block">Book Appointment</span>
+                                    </a>
+                                </div>
                             </div>
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-12 p-x1 bg-100">
+                <div class="row">
+                    <div class="col-sm-5 col-md-4">
+                        <div class="position-relative h-sm-100">
+                            <a class="d-block h-100" href="../../../app/e-commerce/product/product-details.html"><img class="img-fluid object-fit-cover w-sm-100 h-sm-100 rounded-1 absolute-sm-centered" src="~/assets/doctor/doctor1.jpg" alt="" /></a>
+                        </div>
+                    </div> 
+                    <div class="col-sm-7 col-md-8">
+                        <div class="row">
+                            <div class="col-lg-8">
+                                <h5 class="mt-3 mt-sm-0">
+                                    <a class="text-1100 fs-9 fs-lg-8" href="../../../app/healthcare/doctor/doctor-profile.html">
+                                        Dr. Emily Davis, MBBS, MS (Pediatrician)
+                                    </a>
+                                </h5>
+                                <p class="fs-10 mb-2 mb-md-3">
+                                    <a class="text-500" href="#!">Pediatrics Department</a>
+                                </p>
+                                <ul class="list-unstyled d-none d-lg-block">
+                                    <li><span class="fas fa-circle" data-fa-transform="shrink-12"></span><span>Child Specialist</span></li>
+                                    <li><span class="fas fa-circle" data-fa-transform="shrink-12"></span><span>10+ Years of Pediatric Care</span></li>
+                                    <li><span class="fas fa-circle" data-fa-transform="shrink-12"></span><span>Expert in Developmental Disorders</span></li>
+                                    <li><span class="fas fa-circle" data-fa-transform="shrink-12"></span><span>Graduate of Stanford University</span></li>
+                                    <li><span class="fas fa-circle" data-fa-transform="shrink-12"></span><span>Available for Consultation</span></li>
+                                </ul>
+
+                            </div>
+                            <div class="col-lg-4 d-flex justify-content-between flex-column">
+                                <div>
+                                    <h4 class="fs-8 fs-md-7 text-warning mb-0">$150 / Consultation</h4>
+                                    <div class="mb-2 mt-3">
+                                        <span class="fa fa-star text-warning"></span><span class="fa fa-star text-warning"></span>
+                                        <span class="fa fa-star text-warning"></span><span class="fa fa-star text-warning"></span>
+                                        <span class="fa fa-star-half-alt text-warning star-icon"></span><span class="ms-1">(85 Reviews)</span>
+                                    </div>
+                                    <div class="d-none d-lg-block">
+                                        <p class="fs-10 mb-1">Consultation Fee: <strong>$150</strong></p>
+                                        <p class="fs-10 mb-1">Availability: <strong class="text-success">Open for Appointments</strong></p>
+                                    </div>
+                                </div>
+                                <div class="mt-2">
+                                    <a class="btn btn-sm btn-outline-secondary border-300 d-lg-block me-2 me-lg-0" href="#!">
+                                        <span class="far fa-heart"></span><span class="ms-2 d-none d-md-inline-block">Save to Favorites</span>
+                                    </a>
+                                    <a class="btn btn-sm btn-primary d-lg-block mt-lg-2" href="#!">
+                                        <span class="fas fa-calendar-plus"></span><span class="ms-2 d-none d-md-inline-block">Book Appointment</span>
+                                    </a>
+                                </div>
+                            </div>
+
                         </div>
                     </div>
                 </div>
@@ -51,35 +120,50 @@
                         <div class="position-relative h-sm-100">
                             <a class="d-block h-100" href="../../../app/e-commerce/product/product-details.html"><img class="img-fluid object-fit-cover w-sm-100 h-sm-100 rounded-1 absolute-sm-centered" src="~/assets/doctor/doctor3.jpg" alt="" /></a>
                         </div>
-                    </div> 
+                    </div>
                     <div class="col-sm-7 col-md-8">
                         <div class="row">
                             <div class="col-lg-8">
-                                <h5 class="mt-3 mt-sm-0"><a class="text-1100 fs-9 fs-lg-8" href="../../../app/e-commerce/product/product-details.html">Apple iPhone XS Max (4GB RAM, 512GB ROM, 12MP Main Camera)</a></h5>
-                                <p class="fs-10 mb-2 mb-md-3"><a class="text-500" href="#!">Mobile &amp; Tabs</a></p>
+                                <h5 class="mt-3 mt-sm-0">
+                                    <a class="text-1100 fs-9 fs-lg-8" href="../../../app/healthcare/doctor/doctor-profile.html">
+                                        Dr. Emily Davis, MBBS, MS (Pediatrician)
+                                    </a>
+                                </h5>
+                                <p class="fs-10 mb-2 mb-md-3">
+                                    <a class="text-500" href="#!">Pediatrics Department</a>
+                                </p>
                                 <ul class="list-unstyled d-none d-lg-block">
-                                    <li><span class="fas fa-circle" data-fa-transform="shrink-12"></span><span>4GB RAM</span></li>
-                                    <li><span class="fas fa-circle" data-fa-transform="shrink-12"></span><span>512GB Internal Storage</span></li>
-                                    <li><span class="fas fa-circle" data-fa-transform="shrink-12"></span><span>Apple A12 Bionic (7nm)</span></li>
-                                    <li><span class="fas fa-circle" data-fa-transform="shrink-12"></span><span>iOS 12</span></li>
-                                    <li><span class="fas fa-circle" data-fa-transform="shrink-12"></span><span>3174mAh Li-Ion Battery</span></li>
+                                    <li><span class="fas fa-circle" data-fa-transform="shrink-12"></span><span>Child Specialist</span></li>
+                                    <li><span class="fas fa-circle" data-fa-transform="shrink-12"></span><span>10+ Years of Pediatric Care</span></li>
+                                    <li><span class="fas fa-circle" data-fa-transform="shrink-12"></span><span>Expert in Developmental Disorders</span></li>
+                                    <li><span class="fas fa-circle" data-fa-transform="shrink-12"></span><span>Graduate of Stanford University</span></li>
+                                    <li><span class="fas fa-circle" data-fa-transform="shrink-12"></span><span>Available for Consultation</span></li>
                                 </ul>
+
                             </div>
                             <div class="col-lg-4 d-flex justify-content-between flex-column">
                                 <div>
-                                    <h4 class="fs-8 fs-md-7 text-warning mb-0">$1050</h4>
+                                    <h4 class="fs-8 fs-md-7 text-warning mb-0">$150 / Consultation</h4>
                                     <div class="mb-2 mt-3">
-                                        <span class="fa fa-star text-warning"></span><span class="fa fa-star text-warning"></span><span class="fa fa-star text-warning"></span><span class="fa fa-star text-warning"></span><span class="fa fa-star-half-alt text-warning star-icon"></span><span class="ms-1">(13)</span>
+                                        <span class="fa fa-star text-warning"></span><span class="fa fa-star text-warning"></span>
+                                        <span class="fa fa-star text-warning"></span><span class="fa fa-star text-warning"></span>
+                                        <span class="fa fa-star-half-alt text-warning star-icon"></span><span class="ms-1">(85 Reviews)</span>
                                     </div>
                                     <div class="d-none d-lg-block">
-                                        <p class="fs-10 mb-1">Shipping Cost: <strong>$65</strong></p>
-                                        <p class="fs-10 mb-1">
-                                            Stock: <strong class="text-success">Available</strong>
-                                        </p>
+                                        <p class="fs-10 mb-1">Consultation Fee: <strong>$150</strong></p>
+                                        <p class="fs-10 mb-1">Availability: <strong class="text-success">Open for Appointments</strong></p>
                                     </div>
                                 </div>
-                                <div class="mt-2"><a class="btn btn-sm btn-outline-secondary border-300 d-lg-block me-2 me-lg-0" href="#!"><span class="far fa-heart"></span><span class="ms-2 d-none d-md-inline-block">Favourite</span></a><a class="btn btn-sm btn-primary d-lg-block mt-lg-2" href="#!"><span class="fas fa-cart-plus"> </span><span class="ms-2 d-none d-md-inline-block">Book Now</span></a></div>
+                                <div class="mt-2">
+                                    <a class="btn btn-sm btn-outline-secondary border-300 d-lg-block me-2 me-lg-0" href="#!">
+                                        <span class="far fa-heart"></span><span class="ms-2 d-none d-md-inline-block">Save to Favorites</span>
+                                    </a>
+                                    <a class="btn btn-sm btn-primary d-lg-block mt-lg-2" href="#!">
+                                        <span class="fas fa-calendar-plus"></span><span class="ms-2 d-none d-md-inline-block">Book Appointment</span>
+                                    </a>
+                                </div>
                             </div>
+
                         </div>
                     </div>
                 </div>
