--- a/DocTimes/Views/Booking/Calendar.cshtml
+++ b/DocTimes/Views/Booking/Calendar.cshtml
@@ -64,7 +64,7 @@
                                         <img src="~/assets/v2/img/user-1.png" alt="user-1" class="img-fluid">
                                     </div>
                                     <div class="calender-body">
-                                        <h4>Alisa Thomas</h4>
+                                        <h4>Doctor Ayasha Amin</h4>
                                         <p>Schedule an appointment with Alisa</p>
                                         <div class="calender-date-box">
                                             <div id="datepicker"></div>
@@ -167,7 +167,7 @@
                                     </div>
                                     <div class="schedule-card-body">
                                         <div class="schedule-card-title">
-                                            <h4>Alisa Thomas</h4>
+                                            <h4>Doctor Ayasha Amin</h4>
                                             <span>Schedule an appointment with Alisa </span>
                                         </div>
                                         <div class="schedule-card-content">
