--- a/DocTimes/Views/Doctor/List.cshtml
+++ b/DocTimes/Views/Doctor/List.cshtml
@@ -50,7 +50,7 @@
                                     <a class="btn btn-sm btn-outline-secondary border-300 d-lg-block me-2 me-lg-0" href="#!">
                                         <span class="far fa-heart"></span><span class="ms-2 d-none d-md-inline-block">Save to Favorites</span>
                                     </a>
-                                    <a class="btn btn-sm btn-primary d-lg-block mt-lg-2" href="#!">
+                                    <a class="btn btn-sm btn-primary d-lg-block mt-lg-2" href="/Booking/Calendar">
                                         <span class="fas fa-calendar-plus"></span><span class="ms-2 d-none d-md-inline-block">Book Appointment</span>
                                     </a>
                                 </div>
@@ -104,7 +104,7 @@
                                     <a class="btn btn-sm btn-outline-secondary border-300 d-lg-block me-2 me-lg-0" href="#!">
                                         <span class="far fa-heart"></span><span class="ms-2 d-none d-md-inline-block">Save to Favorites</span>
                                     </a>
-                                    <a class="btn btn-sm btn-primary d-lg-block mt-lg-2" href="#!">
+                                    <a class="btn btn-sm btn-primary d-lg-block mt-lg-2" href="/Booking/Calendar">
                                         <span class="fas fa-calendar-plus"></span><span class="ms-2 d-none d-md-inline-block">Book Appointment</span>
                                     </a>
                                 </div>
