--- a/DocTimes/Views/Shared/_PatientLayout.cshtml
+++ b/DocTimes/Views/Shared/_PatientLayout.cshtml
@@ -456,7 +456,7 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="card-footer text-center border-top"><a class="card-link d-block" href="app/social/notifications.html">View all</a></div>
+                                    <div class="card-footer text-center border-top"><a class="card-link d-block" href="#" data-spa="Doctor/Notification/">View all</a></div>
                                 </div>
                             </div>
 
