--- a/DocTimes/Views/Shared/_DoctorLayout.cshtml
+++ b/DocTimes/Views/Shared/_DoctorLayout.cshtml
@@ -10,7 +10,7 @@
     <!-- ===============================================-->
     <!--    Document Title-->
     <!-- ===============================================-->
-    <title>Falcon | Dashboard &amp; Web App Template</title>
+    <title>Pinacle | Dashboard &amp; Web App Template</title>
 
 
     <!-- ===============================================-->
@@ -23,6 +23,7 @@
     <link rel="manifest" href="~/assets/img/favicons/manifest.json">
     <meta name="msapplication-TileImage" content="~/assets/img/favicons/mstile-150x150.png">
     <meta name="theme-color" content="#ffffff">
+  
     <script src="~/assets/js/config.js"></script>
     <link href="~/vendors/swiper/swiper-bundle.min.css" rel="stylesheet">
     <script src="~/vendors/simplebar/simplebar.min.js"></script>
@@ -33,6 +34,7 @@
     <!-- ===============================================-->
     <!--    Stylesheets-->
     <!-- ===============================================-->
+  
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,500,600,700%7cPoppins:300,400,500,600,700,800,900&amp;display=swap" rel="stylesheet">
     <link href="~/vendors/simplebar/simplebar.min.css" rel="stylesheet">
@@ -89,7 +91,7 @@
 
                     </div><a class="navbar-brand" href="index.html">
                         <div class="d-flex align-items-center py-3">
-                            <img class="me-2" src="~/assets/img/icons/spot-illustrations/falcon.png" alt="" width="40" /><span class="font-sans-serif text-primary">falcon</span>
+                            <img class="me-2" src="~/assets/img/icons/spot-illustrations/falcon.png" alt="" width="40" /><span class="font-sans-serif text-primary">Pinacle</span>
                         </div>
                     </a>
                 </div>
@@ -106,7 +108,7 @@
                                 </a>
                                 <ul class="nav collapse show" id="dashboard">
                                     <li class="nav-item">
-                                        <a class="nav-link" href="#" data-spa="WorkStatus/Progress" data-id="1">
+                                        <a class="nav-link" href="/WorkStatus/Progress"  >
                                             <div class="d-flex align-items-center">
                                                 <span class="nav-link-text ps-1">Work Progress</span>
                                             </div>
@@ -114,7 +116,7 @@
                                         <!-- more inner pages-->
                                     </li>
                                     <li class="nav-item">
-                                        <a class="nav-link" style="cursor:pointer" data-spa="Patient/Index">
+                                        <a class="nav-link" style="cursor:pointer" data-spa="Patient/Index" data-id="1">
                                             <div class="d-flex align-items-center">
                                                 <span class="nav-link-text ps-1">Patient</span>
                                             </div>
@@ -138,9 +140,17 @@
                                         <!-- more inner pages-->
                                     </li>
                                     <li class="nav-item">
-                                        <a class="nav-link" style="cursor:pointer" data-spa="Services/Index">
+                                        <a class="nav-link" style="cursor:pointer"  href="/Invoice/create">
                                             <div class="d-flex align-items-center">
-                                                <span class="nav-link-text ps-1">Patient List</span><span class="badge rounded-pill ms-2 badge-subtle-success">New</span>
+                                                <span class="nav-link-text ps-1">Invoice Create</span><span class="badge rounded-pill ms-2 badge-subtle-success">New</span>
+                                            </div>
+                                        </a>
+                                        <!-- more inner pages-->
+                                    </li>
+                                    <li class="nav-item">
+                                        <a class="nav-link"   href="/Doctor/CreateProfile">
+                                            <div class="d-flex align-items-center">
+                                                <span class="nav-link-text ps-1">Create Your Profile</span><span class="badge rounded-pill ms-2 badge-subtle-success">New</span>
                                             </div>
                                         </a>
                                         <!-- more inner pages-->
@@ -154,9 +164,9 @@
                                         <!-- more inner pages-->
                                     </li>
                                     <li class="nav-item">
-                                        <a class="nav-link" href="dashboard/analytics.html">
+                                        <a class="nav-link" href="/Services/Pricing">
                                             <div class="d-flex align-items-center">
-                                                <span class="nav-link-text ps-1">Analytics</span>
+                                                <span class="nav-link-text ps-1">Services Pricing </span>
                                             </div>
                                         </a>
                                         <!-- more inner pages-->
@@ -290,7 +300,7 @@
                                             <div class="d-flex align-items-center">
                                                 <div class="file-thumbnail me-2"><img class="img-fluid" src="~/assets/img/icons/zip.png" alt="" /></div>
                                                 <div class="flex-1">
-                                                    <h6 class="mb-0 title">Falcon v1.8.2</h6>
+                                                    <h6 class="mb-0 title">Pinacle v1.8.2</h6>
                                                     <p class="fs-11 mb-0 d-flex"><span class="fw-semi-bold">John</span><span class="fw-medium text-600 ms-2">30 Sep at 12:30 PM</span></p>
                                                 </div>
                                             </div>
@@ -355,10 +365,10 @@
                                 </div>
                             </div>
                         </li>
-                        <li class="nav-item d-none d-sm-block">
-                            <a class="nav-link px-0 notification-indicator notification-indicator-warning notification-indicator-fill fa-icon-wait" href="app/e-commerce/shopping-cart.html"><span class="fas fa-shopping-cart" data-fa-transform="shrink-7" style="font-size: 33px;"></span><span class="notification-indicator-number">1</span></a>
+                      @*   <li class="nav-item d-none d-sm-block">
+                            <a class="nav-link px-0 notification-indicator notification-indicator-warning notification-indicator-fill fa-icon-wait" href="#"><span class="fas fa-shopping-cart" data-fa-transform="shrink-7" style="font-size: 33px;"></span><span class="notification-indicator-number">1</span></a>
 
-                        </li>
+                        </li> *@
                         <li class="nav-item dropdown">
                             <a class="nav-link notification-indicator notification-indicator-primary px-0 fa-icon-wait" id="navbarDropdownNotification" role="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false" data-hide-on-body-scroll="data-hide-on-body-scroll"><span class="fas fa-bell" data-fa-transform="shrink-6" style="font-size: 33px;"></span></a>
                             <div class="dropdown-menu dropdown-caret dropdown-caret dropdown-menu-end dropdown-menu-card dropdown-menu-notification dropdown-caret-bg" aria-labelledby="navbarDropdownNotification">
@@ -456,7 +466,7 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="card-footer text-center border-top"><a class="card-link d-block" href="app/social/notifications.html">View all</a></div>
+                                    <div class="card-footer text-center border-top"><a class="card-link d-block" href="#" data-spa="Doctor/Notification/">View all</a></div>
                                 </div>
                             </div>
 
@@ -801,7 +811,7 @@
             <div class="text-center mt-5">
                 <img class="mb-4" src="~/assets/img/icons/spot-illustrations/47.png" alt="" width="120" />
                 <h5>Like What You See?</h5>
-                <p class="fs-10">Get Falcon now and create beautiful dashboards with hundreds of widgets.</p><a class="mb-3 btn btn-primary" href="https://themes.getbootstrap.com/product/falcon-admin-dashboard-webapp-template/" target="_blank">Purchase</a>
+                <p class="fs-10">Get Pinacle now and create beautiful dashboards with hundreds of widgets.</p><a class="mb-3 btn btn-primary" href="https://themes.getbootstrap.com/product/falcon-admin-dashboard-webapp-template/" target="_blank">Purchase</a>
             </div>
         </div>
     </div>
@@ -831,6 +841,7 @@
     <script src="~/vendors/bootstrap/bootstrap.min.js"></script>
     <script src="~/vendors/anchorjs/anchor.min.js"></script>
     <script src="~/vendors/is/is.min.js"></script>
+    <script src="~/vendors/tinymce/tinymce.min.js"></script>
     <script src="~/vendors/echarts/echarts.min.js"></script>
     <script src="~/vendors/fontawesome/all.min.js"></script>
     <script src="~/vendors/lodash/lodash.min.js"></script>
@@ -840,10 +851,12 @@
     <script src="~/assets/js/theme.js"></script>
     <script src="~/vendors/choices/choices.min.js"></script>
     <script src="~/assets/js/flatpickr.js"></script>
-
+    <script src="~/vendors/dropzone/dropzone.min.js"></script>
     <script src="~/vendors/swiper/swiper-bundle.min.js"></script>
-
-
+ 
+ 
+    
+ 
 </body>
 
 </html>
