--- a/DocTimes/Views/Doctor/CreateProfile.cshtml
+++ b/DocTimes/Views/Doctor/CreateProfile.cshtml
@@ -1,24 +1,15 @@
 ﻿<div class="row g-lg-3 font-sans-serif">
     <div class="col-lg-8">
-        <div class="card mb-3">
-            <div class="bg-holder d-none d-lg-block bg-card" style="background-image:url(../../../assets/img/icons/spot-illustrations/corner-4.png);">
-            </div>
-            <!--/.bg-holder-->
-
-            <div class="card-body z-1">
-                <h3>Create A New Course</h3>
-                <p class="mb-0">Enlighten the world with your knowledge. Use our Course Creator to design a well-structured course; set whatever price you feel worthy of, and publish at our platform. <br />or, <br class="d-lg-none" />Want to edit your existing course? Jump to <a href="../../../app/e-learning/course/course-grid.html">Your courses</a></p>
-            </div>
-        </div>
+       
         <div class="card mb-3">
             <div class="card-header">
-                <h5 class="mb-0">Course Information</h5>
+                <h5 class="mb-0">Create Your Profile</h5>
             </div>
             <div class="card-body bg-body-tertiary">
                 <form class="row gx-2">
                     <div class="col-12 mb-3">
-                        <label class="form-label" for="course-name">Course Title<span class="text-danger">*</span></label>
-                        <input class="form-control" id="course-name" type="text" placeholder="Course Title" required="required" />
+                        <label class="form-label" for="course-name">Your Name<span class="text-danger">*</span></label>
+                        <input class="form-control" id="course-name" type="text" placeholder="Your Name" required="required" />
                     </div>
                     <div class="col-sm-6 mb-3">
                         <label class="form-label" for="course-category">Category<span class="text-danger">*</span></label>
