--- a/DocTimes/Views/DoctorProfile/Index.cshtml
+++ b/DocTimes/Views/DoctorProfile/Index.cshtml
@@ -5,11 +5,11 @@
                 <div class="card">
                     <div class="card-body">
                         <div class="row g-3 align-items-center">
-                            <div class="col-md-6 col-lg-12 text-center"><img class="img-fluid rounded-3" src="../../assets/img/elearning/avatar/trainer.png" alt="" /></div>
+                            <div class="col-md-6 col-lg-12 text-center"><img class="img-fluid rounded-3" src="~/assets/doctor/doctor1.jpg" alt="" /></div>
                             <div class="col-md-6 col-lg-12">
                                 <div class="row row-cols-1 g-0">
                                     <div class="col text-center">
-                                        <h4>Bill Finger </h4>
+                                        <h4>Dr. Aysha Amin </h4>
                                         <h5 class="mb-1 text-800 fs-9">Artist | Comic Writer</h5>
                                         <p class="mb-0 fs-10">National Comics Publications, NY, USA</p>
                                     </div>
@@ -82,7 +82,7 @@
                             <div class="d-flex position-relative align-items-center mb-2">
                                 <img class="d-flex align-self-center me-2 rounded-3" src="../../assets/img/logos/g.png" alt="" width="50" />
                                 <div class="flex-1">
-                                    <h6 class="fs-9 mb-0"><a class="stretched-link" href="#!">Google</a></h6>
+                                    <h6 class="fs-9 mb-0"><a class="stretched-link" href="#!">Pinacle</a></h6>
                                     <p class="mb-1">34598 associates</p>
                                 </div>
                             </div>
