--- a/DocTimes/Views/Shared/_DoctorLayout.cshtml
+++ b/DocTimes/Views/Shared/_DoctorLayout.cshtml
@@ -134,7 +134,15 @@
                                     <li class="nav-item">
                                         <a class="nav-link" style="cursor:pointer" data-spa="Services/Index">
                                             <div class="d-flex align-items-center">
-                                                <span class="nav-link-text ps-1">Patient List</span><span class="badge rounded-pill ms-2 badge-subtle-success">New</span>
+                                                <span class="nav-link-text ps-1">Create Page</span><span class="badge rounded-pill ms-2 badge-subtle-success">New</span>
+                                            </div>
+                                        </a>
+                                        <!-- more inner pages-->
+                                    </li>
+                                    <li class="nav-item">
+                                        <a class="nav-link" style="cursor:pointer" data-spa="Patient/PaymentHistory">
+                                            <div class="d-flex align-items-center">
+                                                <span class="nav-link-text ps-1">Payment History</span><span class="badge rounded-pill ms-2 badge-subtle-success">New</span>
                                             </div>
                                         </a>
                                         <!-- more inner pages-->
