--- a/DocTimes/Views/Patient/List.cshtml
+++ b/DocTimes/Views/Patient/List.cshtml
@@ -3,7 +3,7 @@
     <div class="card-header">
         <div class="row flex-between-center">
             <div class="col-4 col-sm-auto d-flex align-items-center pe-0">
-                <h5 class="fs-9 mb-0 text-nowrap py-2 py-xl-0">Customers</h5>
+                <h5 class="fs-9 mb-0 text-nowrap py-2 py-xl-0">Patient List</h5>
             </div>
             <div class="col-8 col-sm-auto text-end ps-2">
                 <div class="d-none" id="table-customers-actions">
