--- a/DocTimes/Views/Shared/_DoctorLayout.cshtml
+++ b/DocTimes/Views/Shared/_DoctorLayout.cshtml
@@ -24,6 +24,7 @@
     <meta name="msapplication-TileImage" content="~/assets/img/favicons/mstile-150x150.png">
     <meta name="theme-color" content="#ffffff">
 
+    <link href="~/vendors/glightbox/glightbox.min.css" rel="stylesheet">
     <link href="~/vendors/fullcalendar/main.min.css" rel="stylesheet">
     <link href="~/vendors/flatpickr/flatpickr.min.css" rel="stylesheet">
     <script src="~/assets/js/config.js"></script>
@@ -166,9 +167,9 @@
                                         <!-- more inner pages-->
                                     </li>
                                     <li class="nav-item">
-                                        <a class="nav-link active" href="index.html">
+                                        <a class="nav-link active" href="/Chat/Index">
                                             <div class="d-flex align-items-center">
-                                                <span class="nav-link-text ps-1">Default</span>
+                                                <span class="nav-link-text ps-1">Chat With Doctor</span>
                                             </div>
                                         </a>
                                         <!-- more inner pages-->
@@ -851,6 +852,9 @@
     <script src="~/vendors/bootstrap/bootstrap.min.js"></script>
     <script src="~/vendors/anchorjs/anchor.min.js"></script>
     <script src="~/vendors/is/is.min.js"></script>
+    <script src="~/vendors/glightbox/glightbox.min.js"></script>
+    <script src="https://unpkg.com/picmo@5.7.6/dist/umd/index.js"></script>
+    <script src="https://unpkg.com/@@picmo/popup-picker@5.7.6/dist/umd/index.js"></script>
     <script src="~/vendors/fullcalendar/main.min.js"></script>
     <script src="~/assets/js/flatpickr.js"></script>
     <script src="~/vendors/dayjs/dayjs.min.js"></script>
