--- a/DocTimes/Views/Shared/_DoctorLayout.cshtml
+++ b/DocTimes/Views/Shared/_DoctorLayout.cshtml
@@ -175,21 +175,22 @@
                                         <!-- more inner pages-->
                                     </li>
                                     <li class="nav-item">
-                                        <a class="nav-link" style="cursor:pointer" data-spa="Services/Pricing">
+                                        <a class="nav-link" style="cursor:pointer" data-spa="DoctorPrescription/Create">
+                                            <div class="d-flex align-items-center">
+                                                <span class="nav-link-text ps-1">Prescribe</span>
+                                            </div>
+                                        </a>
+                                        <!-- more inner pages-->
+                                    </li>
+                                    <li class="nav-item">
+                                        <a class="nav-link"  style="cursor:pointer" data-spa="Services/Pricing">
                                             <div class="d-flex align-items-center">
                                                 <span class="nav-link-text ps-1">Services Pricing </span>
                                             </div>
                                         </a>
                                         <!-- more inner pages-->
                                     </li>
-                                    <li class="nav-item">
-                                        <a class="nav-link" href="dashboard/crm.html">
-                                            <div class="d-flex align-items-center">
-                                                <span class="nav-link-text ps-1">CRM</span>
-                                            </div>
-                                        </a>
-                                        <!-- more inner pages-->
-                                    </li>
+                                   
                                     <li class="nav-item">
                                         <a class="nav-link" href="/Doctor/Calendar">
                                             <div class="d-flex align-items-center">
